Revision history for Perl module TestRail::API

0.044 2018-10-9 TEODESIAN
    - Add getCaseFields and addCaseField methods to TestRail::API
    - Correct argument POD for createRunInPlan
    - Add bulkAddResultsByCase

0.043 2018-6-16 TEODESIAN
    - Better error messaging when bad custom result fields are configured in Test::Rail::Parser

0.042 2018-04-30 TEODESIAN
    - Fix uninitialized value warning when no plan (or steps) are emitted
    - Die on HTTP 401/403, we likely will never recover from this
    - Add ability to re-try failed requests in TestRail::API, App::Prove::Plugin::TestRail and testrail-report

0.041 2017-06-06 TEODESIAN
    - Fix MCE usage issue with confusion based on array -> hash inputs in TestRail::Utils::Find
    - Fix issue where Test plans were not recorded in the raw output of a case.
    - Add ability to specify a custom status for failures which emit no test plan
    - Change tests which emit a plan but no assertions into failures.
    - Fix issue where configuration groups in the testrailrc were ignored

0.040 2017-05-24 TEODESIAN
    - Fix performance issue in TestRail::Utils::Find::FindTests
    - Fix strange testsuite bug caused by regressions in MCE
    - Allow filtering in TestRail::API::getPlans
    - Clone refs of cached values so that users can't corrupt it

0.039 2017-03-07 TEODESIAN
    - Fix issue where follow_post_redirect could not be passed to constructor
    - Add getRunResults, getRunResultsPaginated Methods in TestRail::API
    - Cache connections by default for speedups
    - Cache getTests() for getTestByName()
    - Fix warnings when testrail-results encounters 'assigned' results
    - make --cachefile a multi argument in testrail-results
    - add the --perfile argument to testrail-results
    - add the --merged argument to testrail-results
    - Add platform information and guidance on results_by_version to testrail-results

0.038 2017-01-23 TEODESIAN