@@ -4,6 +4,7 @@ Revision history for Perl module TestRail::API
     - Add getCaseFields and addCaseField methods to TestRail::API
     - Correct argument POD for createRunInPlan
     - Add bulkAddResultsByCase
+    - Fix improper caching by project rather than by testsuite in getSections
 
 0.043 2018-6-16 TEODESIAN
     - Better error messaging when bad custom result fields are configured in Test::Rail::Parser
